Generalized the code.
